--- a/spring-simplejdbcupdate/pom.xml
+++ b/spring-simplejdbcupdate/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>paillard.florent.springframework</groupId>
 	<artifactId>spring-simplejdbctemplate</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>spring-simplejdbctemplate</name>
