--- a/spring-simplejdbcupdate/pom.xml
+++ b/spring-simplejdbcupdate/pom.xml
@@ -11,8 +11,23 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.6</java.version>
 	</properties>
 
+	<build>
+	    <pluginManagement>
+	      <plugins>
+	        <plugin>
+	          <groupId>org.apache.maven.plugins</groupId>
+	          <artifactId>maven-compiler-plugin</artifactId>
+	          <configuration>
+		          <source>${java.version}</source>
+		          <target>${java.version}</target>
+	          </configuration>
+	        </plugin>
+	      </plugins>
+	    </pluginManagement>
+	  </build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
